[gd_scene format=3 uid="uid://da5vqqtlc8cc7"]

[ext_resource type="Theme" uid="uid://chcbl2vw654h0" path="res://scenes/ui/game_ui_theme.tres" id="1_fnqby"]
[ext_resource type="Texture2D" uid="uid://crwa0hpcywsyw" path="res://assets/ui/basic_ui_sprites.png" id="2_25t5k"]
[ext_resource type="Script" uid="uid://cku70317hh28b" path="res://scenes/ui/day_and_night_panel.gd" id="2_xc6ft"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xc6ft"]
atlas = ExtResource("2_25t5k")
region = Rect2(261, 2, 7, 12)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_k3f4j"]
load_path = "res://.godot/imported/basic_ui_sprites.png-f1365ff47f1f008f610f3c558cf47256.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ckqsh"]
atlas = SubResource("CompressedTexture2D_k3f4j")
region = Rect2(261, 2, 7, 12)

[node name="DayAndNightPanel" type="Control" unique_id=672051005]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 78.0
offset_bottom = 48.0
theme = ExtResource("1_fnqby")
script = ExtResource("2_xc6ft")

[node name="DayPanel" type="PanelContainer" parent="." unique_id=1569525180]
layout_mode = 0
offset_left = -81.0
offset_right = -1.0
offset_bottom = 27.0
theme_type_variation = &"DayAndNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayPanel" unique_id=1842910205]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="DayLabel" type="Label" parent="DayPanel/MarginContainer" unique_id=2000822352]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayAndNightLabel"
text = "Day 0"

[node name="TimePanel" type="PanelContainer" parent="." unique_id=1869196413]
layout_mode = 0
offset_left = -81.0
offset_top = 29.0
offset_right = -1.0
offset_bottom = 56.0
theme_type_variation = &"DayAndNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="TimePanel" unique_id=215082585]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TimeLabel" type="Label" parent="TimePanel/MarginContainer" unique_id=106920947]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayAndNightLabel"
text = "00:00"

[node name="Control" type="Control" parent="." unique_id=1949886670]
anchors_preset = 0
offset_left = -81.0
offset_top = 58.0
offset_right = -1.0
offset_bottom = 76.0

[node name="NormalSpeedButton" type="Button" parent="Control" unique_id=1655803294]
layout_mode = 0
offset_right = 26.0
offset_bottom = 18.0
theme_type_variation = &"DayAndNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/NormalSpeedButton" unique_id=1926601709]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_xc6ft")

[node name="FastSpeedButton" type="Button" parent="Control" unique_id=885973383]
layout_mode = 0
offset_left = 27.0
offset_right = 53.0
offset_bottom = 18.0
theme_type_variation = &"DayAndNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/FastSpeedButton" unique_id=1922863895]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ckqsh")

[node name="TextureRect2" type="TextureRect" parent="Control/FastSpeedButton" unique_id=90064225]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ckqsh")

[node name="CheetahFastSpeedButton" type="Button" parent="Control" unique_id=1860235902]
layout_mode = 0
offset_left = 54.0
offset_right = 80.0
offset_bottom = 18.0
theme_type_variation = &"DayAndNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/CheetahFastSpeedButton" unique_id=615826184]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -6.0
offset_right = 9.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ckqsh")

[node name="TextureRect2" type="TextureRect" parent="Control/CheetahFastSpeedButton" unique_id=2137978861]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ckqsh")

[node name="TextureRect3" type="TextureRect" parent="Control/CheetahFastSpeedButton" unique_id=907346361]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -6.0
offset_right = -1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ckqsh")

[connection signal="pressed" from="Control/NormalSpeedButton" to="." method="_on_normal_speed_button_pressed"]
[connection signal="pressed" from="Control/FastSpeedButton" to="." method="_on_fast_speed_button_pressed"]
[connection signal="pressed" from="Control/CheetahFastSpeedButton" to="." method="_on_cheetah_fast_speed_button_pressed"]
